import Foundation

// MARK: - User Service
// Handles user profile operations via UserService backend

class UserService {
    private let client = APIClient.shared

    // MARK: - User Profile

    /// Get user profile by ID
    func getUser(userId: String) async throws -> UserProfile {
        // TODO: Implement gRPC call to UserService.GetUser
        // Example:
        // let request = GetUserRequest(user_id: userId)
        // let response: GetUserResponse = try await client.request(endpoint: "/user/get", body: request)
        // return UserProfile(
        //     id: response.user.id,
        //     username: response.user.username,
        //     email: response.user.email,
        //     displayName: response.user.display_name,
        //     bio: response.user.bio,
        //     avatarUrl: response.user.avatar_url,
        //     coverUrl: response.user.cover_url,
        //     website: response.user.website,
        //     location: response.user.location,
        //     isVerified: response.user.is_verified,
        //     isPrivate: response.user.is_private,
        //     followerCount: response.user.follower_count,
        //     followingCount: response.user.following_count,
        //     postCount: response.user.post_count,
        //     createdAt: response.user.created_at,
        //     updatedAt: response.user.updated_at,
        //     deletedAt: response.user.deleted_at
        // )
        throw APIError.notFound
    }

    /// Update user profile
    func updateProfile(
        userId: String,
        displayName: String? = nil,
        bio: String? = nil,
        avatarUrl: String? = nil,
        coverUrl: String? = nil,
        website: String? = nil,
        location: String? = nil
    ) async throws -> UserProfile {
        // TODO: Implement gRPC call to UserService.UpdateProfile
        // Example:
        // let request = UpdateProfileRequest(
        //     user_id: userId,
        //     display_name: displayName,
        //     bio: bio,
        //     avatar_url: avatarUrl,
        //     cover_url: coverUrl,
        //     website: website,
        //     location: location
        // )
        // let response: UpdateProfileResponse = try await client.request(endpoint: "/user/update", body: request)
        // return /* map proto User to UserProfile */
        throw APIError.notFound
    }

    // MARK: - Settings

    /// Get user settings
    func getSettings(userId: String) async throws -> UserSettings {
        // TODO: Implement gRPC call to UserService.GetSettings
        throw APIError.notFound
    }

    /// Update user settings
    func updateSettings(
        userId: String,
        notificationsEnabled: Bool? = nil,
        privateAccount: Bool? = nil,
        language: String? = nil,
        theme: String? = nil
    ) async throws {
        // TODO: Implement gRPC call to UserService.UpdateSettings
        throw APIError.notFound
    }

    // MARK: - Authentication (Future: should move to IdentityService)

    /// Logout user
    func logout() async throws {
        // TODO: This should be in IdentityService
        // For now, just clear local tokens
        // await AuthManager.shared.clearTokens()
    }

    /// Delete account
    func deleteAccount(userId: String) async throws -> Bool {
        // TODO: This should be in IdentityService
        // Implement account deletion
        throw APIError.notFound
    }
}
